--- a/index.html
+++ b/index.html
@@ -601,6 +601,28 @@
 		</div>
 		</div>
 		
+		<div class="cityBox" style="display: none">
+			<div class="boxTitle">
+				<h3>切换城市</h3>
+				<a href="" class="closeBox"></a>
+			</div>
+			<div class="boxchange">
+				<div>
+					<span>您当前选择的城市是：</span>
+					<a href="" class="nowyouchange">广州</a>
+				</div>
+				<div class="entercity">点击进入或者选择其他城市：</div>
+				<ul>
+					<li>全国</li>
+					<li>北京</li>
+					<li>上海</li>
+					<li>杭州</li>
+					<li>深圳</li>
+					<li>其他城市</li>
+				</ul>
+			</div>
+			
+		</div>
 
 	</body>
 </html>
